--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./index.ts",
+    "start:dev": "nodemon dist/app.js",
     "server": "nodemon index.ts"
   },
   "author": "",
